# gst-plugins-cairovis

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  README  configure.ac  set_paths_and_run_cmake.bat
cmake/modules/: FindCairo.cmake  FindGSL.cmake  FindGstreamer.cmake
gst/: CMakeLists.txt  Makefile.am
gst/cairovis/: CMakeLists.txt  Makefile.am  cairovis.c  cairovis_base.c  cairovis_base.h  cairovis_histogram.c  cairovis_histogram.h  cairovis_lineseries.c  cairovis_lineseries.h  cairovis_waterfall.c  cairovis_waterfall.h  colormap.c  colormap.h  colormap_data.c  colormap_data.h  gencolormap.py
